--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "express-boilerplate",
+  "name": "hangman-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "start": "node src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "things": "echo Hi"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +20,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
-    "morgan": "^1.10.0"
+    "knex": "^0.21.16",
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1",
+    "postgrator": "^4.1.1",
+    "postgrator-cli": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
