--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-tag-input": "^6.5.2",
     "recharts": "^2.0.6",
     "web-vitals": "^1.1.0"
   },
