--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "heroku run npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master",
-	  "seed": "psql spells -f ./seeds/seed.tables.sql",
+    "deploy": "git push heroku main",
+    "postdeploy": "npm run migrate:production",
+    "seed": "psql spells -f ./seeds/seed.tables.sql",
     "betterSeed": "psql -U admin -d spells -f ./seeds/seed.tables.sql"
   },
   "keywords": [],
+  "engines": {
+    "node": "12.9.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
