--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "codemirror": "^5.59.2",
+    "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
