--- a/stack.yml
+++ b/stack.yml
@@ -1,3 +1,4 @@
+
 # Use postgres/example user/password credentials
 version: '3.1'
 
@@ -20,6 +21,7 @@ services:
       - ./backend:/usr/src/app
       - /usr/src/app/node_modules
     command: "scripts/setup-and-run.sh"
+    container_name: backend
 
   frontend:
     image: codespells-frontend
@@ -32,4 +34,4 @@ services:
     volumes:
       - ./frontend:/usr/src/app
       - /usr/src/app/node_modules
-
+    container_name: frontend
