--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URL="postgresql://postgres:example@db/spells"
-DATABASE_PASSWORD="example" #Matches Docker setup
-DATABASE_URL_QUERY=""
-TEST_DATABASE_URL="postgresql://postgres:example@db/spells-test"
-JWT_SECRET="super-secret"
-JWT_EXPIRY="720hr"
+DATABASE_URL=postgresql://postgres:example@db/spells
+DATABASE_PASSWORD=example #Matches Docker setup
+DATABASE_URL_QUERY=
+TEST_DATABASE_URL=postgresql://postgres:example@db/spells-test
+JWT_SECRET=super-secret
+JWT_EXPIRY=720hr
