--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_ENDPOINT='http://localhost:8000'
-REACT_APP_TOKEN_KEY='token-storage-key'
+REACT_APP_API_ENDPOINT=http://localhost:8000
+REACT_APP_TOKEN_KEY=token-storage-key
