--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,7 @@
     "predeploy": "npm audit",
     "deploy": "git push heroku main",
     "postdeploy": "npm run migrate:production",
-    "seed": "psql spells -f ./seeds/seed.tables.sql",
-    "betterSeed": "psql -U admin -d spells -f ./seeds/seed.tables.sql"
+    "add:download": "node src/scripts/add-download.js"
   },
   "keywords": [],
   "engines": {
@@ -32,7 +31,8 @@
     "knex": "^0.21.17",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "postgrator-cli": "^4.0.0"
+    "postgrator-cli": "^4.0.0",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
