--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=8000
+DATABASE_URL_BASE=postgresql://postgres:example@db
 DATABASE_URL=postgresql://postgres:example@db/spells
 DATABASE_PASSWORD=example #Matches Docker setup
 DATABASE_URL_QUERY=
