updated Dockerfile and stack.yml to work with new alpine distro

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,8 +9,9 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 RUN npm install
-RUN apt-get update
-RUN apt-get install -y postgresql-client 
+RUN apk update
+RUN apk add postgresql-client 
+RUN apk add bash 
 
 RUN npm install -g nodemon
 
