--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,11 +9,11 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 RUN npm install
-RUN apt-get update
 # If you are building your code for production
 # RUN npm ci --only=production
 
 # Bundle app source
+RUN apk add bash 
 COPY . .
 
 EXPOSE 3000
