--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-blockly": "^7.0.0-alpha.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
