--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "codemirror": "^5.59.2",
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
+    "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
