--- a/stack.yml
+++ b/stack.yml
@@ -39,3 +39,13 @@ services:
     container_name: frontend
     env_file:
       - ./frontend/.env
+
+  lang-server:
+    image: codespells-lang-server
+    build: ./lang-server
+    restart: always
+    ports:
+      - 8090:8090
+    volumes:
+      - ./lang-server:/usr/src/app
+    container_name: lang-server
