--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
+    "react-console-emulator": "^5.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-player": "^2.9.0",
