--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-tag-input": "^6.5.2",
+    "react-tetris": "^0.1.2",
     "recharts": "^2.0.6",
     "web-vitals": "^1.1.0"
   },
