--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "codemirror": "^5.59.2",
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
+    "konva": "^8.0.4",
     "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-console-emulator": "^5.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-konva": "^17.0.2-4",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
