--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.2",
     "react-sound": "^1.2.0",
     "react-tag-input": "^6.5.2",
+    "react-typing-animation": "^1.6.2",
     "recharts": "^2.0.6",
     "web-vitals": "^1.1.0"
   },
