--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/standalone": "^7.14.6",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "babel-core": "^6.26.3",
     "codemirror": "^5.59.2",
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
@@ -17,6 +19,7 @@
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-live": "^2.2.3",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
