--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-live": "^2.2.3",
+    "react-piano": "^3.1.3",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -28,6 +29,7 @@
     "react-tag-input": "^6.5.2",
     "react-typing-animation": "^1.6.2",
     "recharts": "^2.0.6",
+    "soundfont-player": "^0.12.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
