--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
     "codemirror": "^5.59.2",
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
@@ -22,7 +25,9 @@
     "react-scripts": "4.0.2",
     "react-tag-input": "^6.5.2",
     "recharts": "^2.0.6",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "moment": "^2.29.1",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
