--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-simple-snake": "^0.2.2",
     "react-sound": "^1.2.0",
     "react-tag-input": "^6.5.2",
     "react-typing-animation": "^1.6.2",
