--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "babel-core": "^6.26.3",
+    "blockly": "^5.20210325.1",
     "codemirror": "^5.59.2",
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
