--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.6.3",
     "babel-core": "^6.26.3",
     "blockly": "^5.20210325.1",
+    "canvas-confetti": "^1.4.0",
     "codemirror": "^5.59.2",
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
