--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-blockly": "^7.0.0-alpha.1",
     "react-codemirror2": "^7.2.1",
     "react-console-emulator": "^5.0.1",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-konva": "^17.0.2-4",
@@ -36,8 +37,10 @@
     "react-tetris": "^0.1.2",
     "react-typed": "^1.2.0",
     "react-typing-animation": "^1.6.2",
+    "reactronica": "^0.5.2",
     "recharts": "^2.0.6",
     "soundfont-player": "^0.12.0",
+    "tone": "^14.7.77",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
