--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "blockly": "^5.20210325.1",
     "canvas-confetti": "^1.4.0",
     "codemirror": "^5.59.2",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "cytoscape-fcose": "^2.1.0",
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
     "konva": "^8.0.4",
@@ -23,6 +25,7 @@
     "react-codemirror2": "^7.2.1",
     "react-console-emulator": "^5.0.1",
     "react-countdown": "^2.3.2",
+    "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-konva": "^17.0.2-4",
