--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,18 @@
     "blockly": "^5.20210325.1",
     "canvas-confetti": "^1.4.0",
     "codemirror": "^5.59.2",
+    "cytoscape": "^3.19.0",
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-fcose": "^2.1.0",
     "haikunator": "^2.1.2",
     "jwt-decode": "^3.1.2",
     "konva": "^8.0.4",
     "markdown-to-jsx": "^7.1.3",
+    "matter-js": "^0.17.1",
     "react": "^17.0.1",
     "react-blockly": "^7.0.0-alpha.1",
     "react-codemirror2": "^7.2.1",
+    "react-color": "^2.19.3",
     "react-console-emulator": "^5.0.1",
     "react-countdown": "^2.3.2",
     "react-cytoscapejs": "^1.2.1",
