--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@react-three/cannon": "^2.5.0",
+    "@react-three/drei": "^7.2.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -22,6 +24,7 @@
     "konva": "^8.0.4",
     "markdown-to-jsx": "^7.1.3",
     "matter-js": "^0.17.1",
+    "nanoid": "^3.1.23",
     "react": "^17.0.1",
     "react-blockly": "^7.0.0-alpha.1",
     "react-codemirror2": "^7.2.1",
@@ -41,13 +44,17 @@
     "react-sound": "^1.2.0",
     "react-tag-input": "^6.5.2",
     "react-tetris": "^0.1.2",
+    "react-three-fiber": "^6.0.13",
     "react-typed": "^1.2.0",
     "react-typing-animation": "^1.6.2",
     "reactronica": "^0.5.2",
     "recharts": "^2.0.6",
+    "recoil": "^0.3.1",
     "soundfont-player": "^0.12.0",
+    "three": "^0.130.1",
     "tone": "^14.7.77",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "zustand": "^3.5.7"
   },
   "scripts": {
     "start": "react-scripts start",
