--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@react-three/fiber": "^7.0.6",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -46,6 +47,7 @@
     "reactronica": "^0.5.2",
     "recharts": "^2.0.6",
     "soundfont-player": "^0.12.0",
+    "three": "^0.130.1",
     "tone": "^14.7.77",
     "web-vitals": "^1.1.0"
   },
