--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_ENDPOINT=http://localhost:8000
+REACT_APP_API_ENDPOINT=http://nexus.codespells.org:8000
 REACT_APP_TOKEN_KEY=token-storage-key
 REACT_APP_LANG_SERVER=http://localhost:8091
