--- a/stack.yml
+++ b/stack.yml
@@ -60,3 +60,15 @@ services:
     container_name: lang-server
     networks: 
       - dev-codespells-network
+
+  racket-bridge:
+    image: racket-bridge
+    build: ./nexus-client
+    restart: always
+    ports:
+      - 8082:8082
+      - 8888:8888
+    volumes:
+      - ./nexus-client:/usr/src/app
+    container_name: racket-bridge
+  
