--- a/nexus-client/Dockerfile
+++ b/nexus-client/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /usr/src/app
 
 # Bundle app source
 COPY . .
-RUN raco pkg install --deps search-auto
+RUN raco pkg install --deps search-auto 
 
 EXPOSE 8082
 EXPOSE 8888
-CMD [ "racket", "web-ui.rkt" ]
+CMD [ "racket", "main.rkt" ]
