--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,6 +87,7 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^5.2.0",
     "react-sound": "^1.2.0",
     "react-tag-input": "^6.5.2",
