worked out the login context, login modal now closes after logging in, getting close to implementing saving spells in the cloud again

--- a/stack.yml
+++ b/stack.yml
@@ -49,29 +49,29 @@ services:
     networks: 
       - dev-codespells-network
 
-  #lang-server:
-  #  image: codespells-lang-server
-  #  build: ./lang-server
-  #  restart: always
-  #  ports:
-  #    - 8091:8090
-  #  volumes:
-  #    - ./lang-server:/usr/src/app
-  #  container_name: lang-server
-  #  networks: 
-  #    - dev-codespells-network
-
-  racket-bridge:
-    image: racket-bridge
-    build: ./nexus-client
-    restart: always
-    ports:
-      - 8082:8082
-      - 8888:8888
-    volumes:
-      - ./nexus-client:/usr/src/app
-    command: "racket main.rkt"
-    container_name: racket-bridge
-    networks: 
-      - dev-codespells-network
-  
+#  #lang-server:
+#  #  image: codespells-lang-server
+#  #  build: ./lang-server
+#  #  restart: always
+#  #  ports:
+#  #    - 8091:8090
+#  #  volumes:
+#  #    - ./lang-server:/usr/src/app
+#  #  container_name: lang-server
+#  #  networks: 
+#  #    - dev-codespells-network
+#
+#  racket-bridge:
+#    image: racket-bridge
+#    build: ./nexus-client
+#    restart: always
+#    ports:
+#      - 8082:8082
+#      - 8888:8888
+#    volumes:
+#      - ./nexus-client:/usr/src/app
+#    command: "racket main.rkt"
+#    container_name: racket-bridge
+#    networks: 
+#      - dev-codespells-network
+#  
