--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-#REACT_APP_API_ENDPOINT=https://nexus-api.codespells.org
-REACT_APP_API_ENDPOINT=http://localhost:8000
+REACT_APP_API_ENDPOINT=https://nexus-api.codespells.org
+#REACT_APP_API_ENDPOINT=http://localhost:8000
 REACT_APP_TOKEN_KEY=token-storage-key
 REACT_APP_LANG_SERVER=http://localhost:8091
